# ca3_for_submission-GuyGoose

./: CMakeLists.txt  README.md
Bulb/: game.h  platformer_main.cpp
Bulb/components/: cmp_bullet.cpp  cmp_path_follow.cpp  cmp_player_anim.cpp  cmp_player_anim.h  cmp_pointer.cpp  cmp_pointer.h  cmp_sprite.cpp  cmp_sprite.h  cmp_text.cpp
Bulb/scenes/: scene_end.cpp  scene_end.h  scene_game_over.cpp  scene_game_over.h  scene_level1.cpp  scene_level1.h  scene_level2.cpp  scene_level3.cpp  scene_level3.h
Drop-Pod/: game.h  platformer_main.cpp
Drop-Pod/components/: cmp_bullet.cpp  cmp_bullet.h  cmp_light.cpp  cmp_light.h  cmp_path_follow.cpp  cmp_path_follow.h  cmp_physics.h  cmp_player_anim.cpp  cmp_player_anim.h  cmp_player_physics.cpp  cmp_player_physics.h  cmp_shotgun.cpp  cmp_shotgun.h
Drop-Pod/scenes/: scene_level1.cpp  scene_level2.cpp  scene_level2.h  scene_level3.cpp  scene_menu.cpp  scene_menu.h  scene_planet_level.cpp
engine/: engine.cpp
lib_ecm/: ecm.cpp  ecm.h
lib_maths/: maths.h
lib_tile_level_loader/: LevelSystem.cpp  LevelSystem.h
res/: level_1.txt  level_2.txt  level_3.txt
